<resources>
    <string name="app_name">BarApp</string>
    <string name="title_activity_master">MasterActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="prefs_file">com.example.barapp.PREFERENCE_FILE_KEY</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_reservas">Mis reservas</string>
    <string name="menu_slideshow">Otro fragment</string>
    <string name="menu_settings">Configuración</string>

    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="forgotpassword">¿Olvidaste tu contraseña?</string>
    <string name="password_sending">Password enviada con éxito</string>

    <string name="welcome">Bienvenido!</string>

    <string name="send_mail">Mail enviado</string>
    <string name="error_send_mail">Error al enviar el mail</string>


    <string name="logout">Cerrar sesión</string>

    <string name="confirm_logout">¿Está seguro que desea cerrar sesión?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>

    <string name="error_login">Error al autenticarse</string>

    <string name="reservar">Reservar</string>

    <string name="select_day">Seleccionar día</string>

    <string name="title_activity_maps">Ubicaciones</string>
    <string name="registrarse">Registrarse</string>
    <string name="recuperar_contrasena">Recuperar contraseña</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>

    <string name="facebook_app_id">1727705217440063</string>
    <string name="fb_login_protocol_scheme">fb1727705217440063</string>
    <string name="google">Ingresar con Google</string>
    <string name="face">Ingresar con Facebook</string>
    <string name="ver_en_mapa">Ver todos</string>
    <string name="upload">Subiendo…</string>
    <string name="upload_perfil">Subiendo foto de perfil</string>
    <string name="upload_succesfully">Imagen cargada con éxito</string>
    <string name="weak_password">Contraseña débil, elige otra.</string>
    <string name="invalid_mail">Se debe ingresar un mail válido.</string>
    <string name="collision_mail">El email ya se encuentra registrado.</string>
    <string name="error_register">Se produjo un error al registrarse. Intente nuevamente.</string>
    <string name="complete_all">Se deben completar todos los campos.</string>
    <string name="into_valid_mail">Se debe ingresar un mail válido.</string>
    <string name="short_password">La contraseña debe tener al menos 6 caracteres.</string>

    <string name="download">Descargar</string>
    <string name="download_succesfully">Imagen descargada exitosamente</string>

    <string name="share">Compartir</string>

    <string name="dialog_text1">Reservaste tu mesa en</string>
    <string name="dialog_text2">el día</string>
    <string name="reserva_exitosa">¡Reserva exitosa!</string>

    <string name="activate_location">Activá la ubicación de tu dispositivo.</string>
    <string name="modify_permissions">Para modificar permisos de localización ve a ajustes.</string>

    <string name="exist_reserve">Ya tenés una reserva en</string>
    <string name="he">el</string>
    <string name="exceeds_capacity">no tiene mesas disponibles el</string>
    <string name="error_location">Error al obtener ubicación</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Preference Titles -->
    <string name="preferences_header">Preferencias</string>

    <string name="language_title">Idioma</string>
    <string name="cancelar">Cancelar</string>

    <string name="confirm_cancel_reserve">¿Está seguro que desea cancelar esta reserva?</string>
    <string name="confirm">Confirmar</string>
    <string name="canceled_reserve">Reserva cancelada correctamente.</string>
    <string name="sin_reservas">No existen reservas</string>
    <string name="sin_resultados">La búsqueda no arrojó resultados</string>
</resources>