<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <!--
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/item_image_reserva"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop" />
        -->
        <TextView
            android:id="@+id/item_title_reserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textAppearance="?attr/textAppearanceHeadline5"
            tools:text="Nombre del bar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/line_address_reserva"
            >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/item_address_reserva"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/item_address_reserva"
                app:srcCompat="@drawable/ic_home_place"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/item_address_reserva"
                android:height="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceCaption"
                android:gravity="center"
                android:layout_marginStart="10dp"
                tools:text="Direccion" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line_phone_reserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/icon_phone_reserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/item_address_reserva"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/item_address_reserva"
                app:srcCompat="@drawable/ic_phone_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/item_phone_reserva"
                android:height="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:gravity="center"
                android:layout_marginStart="10dp"
                tools:text="Telefono" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/icon_calendar_reserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/icon_phone_reserva"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/icon_phone_reserva"
                android:src="@drawable/ic_baseline_calendar_today_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/item_calendar_reserva"
                android:height="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:gravity="center"
                android:layout_marginStart="10dp"
                tools:text="11-11-2021" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/btnCancelarReserva"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints"/>

            <ImageView
                android:id="@+id/iconFacebook_reserva"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iconInstagram_reserva"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/facebook"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/facebook" />

            <ImageView
                android:id="@+id/iconInstagram_reserva"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/instagram"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/instagram" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>